Fixed spacing between content

--- a/css/text.css
+++ b/css/text.css
@@ -36,6 +36,10 @@
     font-size: 22px;
 }
 
+.text-section-p+.text-section-img {
+    margin-top: 60px;
+}
+
 .text-section-img {
     height: auto;
     display: block;
@@ -48,7 +52,8 @@
 .text-section-iframe {
     width: 100%;
     height: 380px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
+    margin-top: 60px;
 }
 
 .launch-frontpage-image {
